# langserve

./: Makefile  pyproject.toml
langserve/: api_handler.py  serialization.py  server.py
tests/unit_tests/: test_server_client.py
